Fix for Safari on iOS
- Fixed a visual bug

--- a/squadron-assembler/styles.scss
+++ b/squadron-assembler/styles.scss
@@ -286,11 +286,12 @@ button {
         outline-offset: -2px;
         border-radius: 4px;
     }
-    input {
-        opacity: 0;
-        width: 0;
-        height: 0;
-    }
+}
+#upload-picture {
+    position: absolute;
+    opacity: 0;
+    width: 0;
+    height: 0;
 }
 #editor-container {
     display: flex;
